--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 {
     width:100%;
     padding-bottom: 2px;
+    z-index: -1;
     background: linear-gradient(90deg, rgba(2,0,36,0) 0%, rgba(48,192,209,1) 49%, rgba(240,140,0,1) 100%);
     border-radius: 0px 0px 12px 12px;
 }
