--- a/src/MyNavbar.css
+++ b/src/MyNavbar.css
@@ -28,6 +28,12 @@
 {
     background-color: rgb(20, 20, 20) !important;
     border: 1px solid rgb(44, 44, 44) !important;
+    animation: fadeIn 0.25s;
+}
+
+@keyframes fadeIn{
+    0% {opacity: 0;}
+    100% {opacity: 1;}
 }
 
 .dropdowndividerstyle
